--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,8 @@
-<h2>hii <%= name%></h2>
-<form action="/logout?_method=DELETE" method="POST">
-    <button type="submit">Log Out</button>
-</form>
+<div class="main_box">
+
+    <h1>Hello <%= name%></h1>
+    <form action="/logout?_method=DELETE" method="POST">
+        <button type="submit">Log Out</button>
+    </form>
+
+</div>
