--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,18 +1,19 @@
-<h1>Register</h1>
-<form action="/register" method="POST">
-    <div>
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" required>
-    </div>
-    <div>
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" required>
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
-    </div>
+<div class="main_box">
+    
+    <h1>Register</h1>
+    <form action="/register" method="POST">
+        <div>
+            <input type="text" name="name" id="name" placeholder="Full Name" required >
+        </div>
+        <div>
+            <input type="email" name="email" id="email" placeholder="Email" required>
+        </div>
+        <div>
+            <input type="password" name="password" id="password" placeholder="Password" required>
+        </div>
 
-    <button type="submit">Register</button>
-</form>
-<a href="/login">Login</a>
+        <button type="submit">Register</button>
+    </form>
+    <p>Already Registerd? &nbsp <a href="/login">Login Here</a> </p>
+
+</div>
